Modificar menu, crear categorias independientes de activitys para, conexion a la base de datos (postgres y revisisar todo el tema de los diseños para el main menu, y revisar traducciones.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <!--   TODO: Menu Names     -->
 
     <!--     General Menu names     -->
-    <string name="home">HOME</string>
+    <string name="home">Inicio</string>
     <string name="search">Buscar</string>
     <string name="all_categories">Categorias</string>
     <string name="add_missing_place">quitar</string>
